--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     background-size: cover;
     background-repeat: no-repeat;
+
 }
 
 #weatherBox {
     color:floralwhite;
     float:right;
     position: absolute;
-    transform: translate(1000px,-190px);
+    transform: translate(1000px,10px);
     height:200px;
     width:200px;
     border:1px solid white
@@ -15,7 +16,6 @@ body {
 
 #middleText {
     text-align: center;
-    margin-top:23%;
     color:floralwhite;
     font-size:70px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -34,3 +34,13 @@ body {
     margin-top:3%;
     height:40px;
 }
+
+#textButton{
+    transform:translateY(200%);
+}
+
+#mainPage {
+    height:100vh;
+    max-width:100vw;
+}
+
