--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-size: cover;
     background-repeat: no-repeat;
+
     background-position: center center;
     background-attachment: fixed;
 }
@@ -15,7 +16,7 @@ body {
     border:1px solid white
 }
 
-#middleText {
+.middleText {
     text-align: center;
     margin-top:9%;
     color:floralwhite;
@@ -35,7 +36,7 @@ body {
         background-attachment: fixed;
     }
 
-    #middleText {
+    .middleText {
         text-align: center;
         margin-top:9%;
         color:floralwhite;
@@ -43,7 +44,7 @@ body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-weight:500;
     }
-    #foodButton {
+    .foodButton {
         text-align: center;
         margin-top:9%;
         height:40px;
@@ -51,11 +52,11 @@ body {
     }
 }
 
-#location{
+.location{
     display: inline-block;
 }
 
-#foodButton {
+.foodButton {
     text-align: center;
     /*margin-left:42%;*/
     margin-top:3%;
