--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
 #weatherBox {
     color:floralwhite;
     float:right;
-    position: absolute;
-    transform: translate(1000px,10px);
     height:200px;
     width:200px;
     border:1px solid white
@@ -20,8 +18,6 @@ body {
     font-size:70px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight:500;
-    /*display: inline-block;*/
-    /*margin-left:20%;*/
 }
 
 #location{
@@ -35,12 +31,11 @@ body {
     height:40px;
 }
 
-#textButton{
-    transform:translateY(200%);
-}
-
 #mainPage {
     height:100vh;
     max-width:100vw;
 }
 
+#textContainer {
+
+}
