--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@ body {
     font-size:70px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight:500;
-    /*display: inline-block;*/
-    /*margin-left:20%;*/
 }
 
 #location{
@@ -43,4 +41,9 @@ body {
     height:100vh;
     max-width:100vw;
 }
-
+#googleMaps {
+    height: 45%;
+    width: 80%;
+    margin-left: 10%;
+    transform: translateY(100%);
+}
