--- a/style.css
+++ b/style.css
@@ -44,3 +44,24 @@ body {
     max-width:100vw;
 }
 
+#yelpInfo {
+    display:inline-block;
+    height: 350px;
+    width: 550px;
+    top:60px;
+    margin-left: 192px;
+    background-color:white;
+    float:left;
+    position:relative;
+}
+
+#yelpPicture {
+    display:inline-block;
+    height: 350px;
+    width: 550px;
+    position:relative;
+    top:60px;
+    margin-right: 192px;
+    background-color:white;
+    float:right;
+}
