--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body {
 
 #foodButton {
     text-align: center;
-    margin-left:42%;
-    margin-top:3%;
-    height:40px;
+    margin-left: 23%;
+    margin-top: 3%;
+    height: 40px;
 }
 
 #mainPage {
@@ -41,4 +41,11 @@ body {
     width: 80%;
     margin-left: 10%;
     transform: translateY(100%);
+}
+
+#firstPage {
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+    display: flex;
 }
