--- a/style.css
+++ b/style.css
@@ -47,3 +47,8 @@ body {
     margin-left: 10%;
     transform: translateY(100%);
 }
+
+/*Helper Class*/
+.hideOverflow {
+    overflow-y: hidden;
+}
