--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     background-size: cover;
     background-repeat: no-repeat;
-    overflow:hidden;
 }
 
 #weatherBox {
@@ -61,7 +60,7 @@ body {
     height: 45%;
     width: 80%;
     margin-left: 10%;
-    transform: translateY(100%);
+    transform: translateY(30%);
 }
 
 #firstPage {
@@ -69,4 +68,10 @@ body {
     height: 100%;
     justify-content: center;
     display: flex;
+}
+
+#food {
+    background-size:contain;
+    height:100%;
+    width:100%;
 }
