--- a/style.css
+++ b/style.css
@@ -44,9 +44,13 @@ body {
     width: 550px;
     top:60px;
     margin-left: 192px;
-    background-color:white;
+    background-color:darkred;
     float:left;
     position:relative;
+    border-radius:5px;
+    color:white;
+    opacity:0.9;
+    font-size:50px;
 }
 
 #yelpPicture {
@@ -58,12 +62,16 @@ body {
     margin-right: 192px;
     background-color:white;
     float:right;
+    border-radius:5px;
+    opacity:0.9;
 }
 #googleMaps {
     height: 45%;
     width: 80%;
     margin-left: 10%;
     transform: translateY(30%);
+    border-radius:5px;
+    opacity:0.92;
 }
 /*Helper Class*/
 .hideOverflow {
@@ -79,13 +87,14 @@ body {
 #food {
     background-size:contain;
     height:100%;
-    width:100%;
+    width:100%;}
+
 @media only screen and (max-width: 600px) {
     body {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
-    }
+    }}
 
     #middleText {
         text-align: center;
@@ -102,4 +111,3 @@ body {
         margin: 3% auto;
         height: 40px;
     }
-}
