--- a/style.css
+++ b/style.css
@@ -41,31 +41,31 @@ body {
 }
 
 #yelpInfo {
-    display:inline-block;
+    display: inline-block;
     height: 350px;
     width: 550px;
-    top:60px;
+    top: 60px;
     margin-left: 192px;
-    background-color:darkred;
-    float:left;
-    position:relative;
-    border-radius:5px;
-    color:white;
-    opacity:0.9;
-    font-size:50px;
+    background-color: darkred;
+    float: left;
+    position: relative;
+    border-radius: 5px;
+    color: white;
+    opacity: 0.9;
+    font-size: 50px;
 }
 
 #yelpPicture {
-    display:inline-block;
+    display: inline-block;
     height: 350px;
     width: 550px;
-    position:relative;
-    top:60px;
+    position: relative;
+    top: 60px;
     margin-right: 192px;
-    background-color:white;
-    float:right;
-    border-radius:5px;
-    opacity:0.9;
+    background-color: white;
+    float: right;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 #googleMaps {
     height: 45%;
@@ -92,34 +92,96 @@ body {
     width: 100%;
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-    }}
-
-    #middleText {
-        text-align: center;
-        color:floralwhite;
-        font-size:40px;
-        text-shadow: 4px 4px black;
-        font-weight:500;
-    }
-
-    #foodButton {
-        text-align: center;
-        display: block;
-        margin: 3% auto;
-        height: 40px;
-    }
-
-}
-
 .clock {
     font-size: 7em;
     text-align: center;
     text-shadow: 4px 4px black;
     color: #fff;
 }
+
+@media only screen and (max-width: 650px) {
+    body {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    .clock {
+        font-size: 3em;
+        text-align: center;
+        text-shadow: 4px 4px black;
+        color: #fff;
+    }
+
+    #middleText {
+        text-align: center;
+        color: floralwhite;
+        font-size: 30px;
+        text-shadow: 4px 4px black;
+        font-weight: 500;
+    }
+
+    #foodButton {
+        text-align: center;
+        font-size: 12px;
+        display: block;
+        margin: 3% auto;
+        height: 40px;
+    }
+
+    #textContainer {
+        font-family: 'Overpass Mono', monospace;
+    }
+
+    #mainPage {
+        height: 100vh;
+        max-width: 100vw;
+    }
+
+    #yelpInfo {
+        all: unset;
+        background-color: darkred;
+        color: white;
+        opacity: 0.9;
+        font-size: 28px;
+    }
+
+    #yelpPicture {
+        all: unset;
+        padding: 0;
+        opacity: 0.9;
+    }
+
+    #googleMaps {
+        height: 45%;
+        width: 80%;
+        margin-left: 10%;
+        transform: translateY(30%);
+        border-radius: 5px;
+        opacity: 0.92;
+    }
+
+    #firstPage {
+        align-items: center;
+        height: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    #food {
+        all: unset;
+        background-size: contain;
+        width: 100%;
+        height: 40%;
+
+    }
+
+    #location{
+        display: inline-block;
+    }
+
+
+}
+
+
 
