--- a/style.css
+++ b/style.css
@@ -5,15 +5,24 @@ body {
 }
 
 #weatherBox {
-    color:floralwhite;
-    float:right;
-    height:200px;
-    width:200px;
-    border:1px solid white
+    color:dimgray;
+    display: inline-block;
+    position: fixed;
+    left: 43%;
+    top: 22%;
+    height: 60px;
+    width: 290px;
+    border: 1px solid white;
+    font-size: 19px;
+    background-color:ghostwhite;
+    opacity:0.9;
 }
 
 #textContainer {
     font-family: 'Overpass Mono', monospace;
+    position: fixed;
+    top: 50%;
+    width:100%;
 }
 
 #middleText {
@@ -57,8 +66,10 @@ body {
 
 #yelpPicture {
     display:inline-block;
-    height: 350px;
-    width: 550px;
+    height: auto;
+    width: auto;
+    max-height:350px;
+    max-width:500px;
     position:relative;
     top:60px;
     margin-right: 192px;
@@ -66,6 +77,7 @@ body {
     float:right;
     border-radius:5px;
     opacity:0.9;
+    overflow:hidden;
 }
 #googleMaps {
     height: 45%;
@@ -97,14 +109,14 @@ body {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
-    }}
+    }
 
     #middleText {
         text-align: center;
-        color:floralwhite;
-        font-size:40px;
+        color: floralwhite;
+        font-size: 40px;
         text-shadow: 4px 4px black;
-        font-weight:500;
+        font-weight: 500;
     }
 
     #foodButton {
@@ -113,13 +125,15 @@ body {
         margin: 3% auto;
         height: 40px;
     }
-
 }
-
 .clock {
-    font-size: 7em;
+    font-size: 6em;
     text-align: center;
     text-shadow: 4px 4px black;
     color: #fff;
+    display: inline-block;
+    position: absolute;
+    left: 41%;
+    top: 33%;
 }
 
