centered clock with new changes on css from michael

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body {
         text-align: center;
         text-shadow: 4px 4px black;
         color: #fff;
+        left: 29%;
     }
 
     #middleText {
