--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     width: 10%;
     text-align: center;
     vertical-align: middle;
+    text-shadow: 2px 2px black;
     padding-top: 10px;
     padding-right: 34px;
     float: right;
@@ -142,7 +143,7 @@ body {
         text-align: center;
         text-shadow: 4px 4px black;
         color: #fff;
-        left: 29%;
+        left: 0%;
     }
 
     #middleText {
@@ -212,6 +213,20 @@ body {
 
     #location {
         display: inline-block;
+    }
+
+    #weatherBox {
+        all: unset;
+        color: whitesmoke;
+        font-size: 25px;
+        opacity: 0.9;
+        text-align: center;
+        text-shadow: 2px 2px black;
+        vertical-align: middle;
+        padding-top: 10px;
+        padding-right: 1px;
+        margin-right: 48px;
+        float: right;
     }
 }
 
