--- a/style.css
+++ b/style.css
@@ -52,21 +52,21 @@ body {
 
 #yelpInfo {
     text-align: center;
-    display:inline-flex;
+    display: inline-flex;
     flex-flow: wrap;
     justify-content: center;
     align-items: baseline;
     height: 350px;
     width: 550px;
-    top:30px;
+    top: 30px;
     margin-left: 192px;
-    background-color:darkred;
-    float:left;
-    position:relative;
-    border-radius:5px;
-    color:white;
-    opacity:0.9;
-    padding:0;
+    background-color: darkred;
+    float: left;
+    position: relative;
+    border-radius: 10px;
+    color: white;
+    opacity: 0.9;
+    padding: 0;
 }
 #businessName {
     font-size:50px;
@@ -91,18 +91,18 @@ body {
 }
 
 #yelpPicture {
-    display:inline-block;
+    display: inline-block;
     height: 350px;
     width: 500px;
-    max-height:350px;
-    max-width:500px;
-    position:relative;
-    top:30px;
-    float:right;
-    border-radius:5px;
-    opacity:0.9;
-    overflow:hidden;
-    padding:0;
+    max-height: 350px;
+    max-width: 500px;
+    position: relative;
+    top: 30px;
+    float: right;
+    border-radius: 10px;
+    opacity: 0.9;
+    overflow: hidden;
+    padding: 0;
 }
 #googleMaps {
     height: 45%;
@@ -138,7 +138,7 @@ body {
     color: #fff;
     display: inline-block;
     position: fixed;
-    top: 28%;
+    top: 27%;
     width: 100%;
 }
 
@@ -272,7 +272,10 @@ body {
         float: right;
     }
     .clock {
-        display:none;
+        transform: translateY(80px);
+    }
+    .clockHide {
+
     }
 }
 
